# api

./: Dockerfile  alembic.ini  docker-compose.yaml  index.html  main.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
alembic/: env.py
app/: main.py
app/api/endpoints/: auth.py  career.py  employee.py  pdi.py  person.py  skill.py
app/core/: config.py
app/db/: database.py
app/middleware/: middleware.py
app/model/: models.py  schemas.py
app/models/: schemas.py
app/models/schemas/: career.py  person.py  skill.py
app/routers/: auth.py  employee.py
app/services/: career.py  employee_service.py  pdi_service.py  person.py  person_service.py  repository.py  security.py  skill.py
app/tools/: initialize_db.py
