[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["rikemorais <rikeaju@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.1"
alembic = "^1.13.2"
aioredis = "^2.0.1"
uvicorn = "^0.30.6"


[tool.poetry.group.dev.dependencies]
interrogate = "^1.7.0"
pre-commit = "^3.8.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
ruff = "^0.6.1"
taskipy = "^1.13.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.31"
mkdocstrings = "^0.25.2"
mkdocstrings-python = "^1.10.8"
mkdocs-glightbox = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
extend-exclude = ['migrations']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.taskipy.tasks]
format = 'ruff check . --fix && ruff format .'
lint = 'ruff check . && ruff check . --diff'
post_test = 'coverage html'
pre_test = 'task lint'
test = 'pytest --cov=app -vv'
